examples/type_system/failing/40_effect_alias_print_in_time_function.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

// E400: aliasing `print` must not bypass IO effect checks in `with Time` functions.

fn g() -> Int with Time {
    let p = print
    p("tick")
    1
}

fn main() -> Unit with IO, Time {
    g();
}
